# kaggle_March-Machine-Learning-Mania-2026

./: .gitignore  README.md  pyproject.toml  requirements.txt
.Trash-0/info/: Untitled.ipynb.trashinfo
.github/workflows/: blank.yml  deploy.yml
notebooks/: baseline.ipynb  kernel-metadata.json  ncaa-2026-eda-elo-ratings-and-gradient-esemble.ipynb
